Update strategy name from 'Breakout Play' to 'Breakout'

--- a/index.directory/SFTi.Tradez/week.2025.45/11:04:2025.1.md
+++ b/index.directory/SFTi.Tradez/week.2025.45/11:04:2025.1.md
@@ -9,7 +9,7 @@ entry_price: 0.9050
 exit_price: 0.81
 position_size: 159
 direction: LONG
-strategy: Breakout Play
+strategy: Breakout
 stop_loss: 0.80
 target_price: 1.30
 risk_reward_ratio: 3.76
